--- a/desafio-insight-front/package.json
+++ b/desafio-insight-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^5.18.0",
+    "antd-mask-input": "^2.0.7",
     "axios": "^1.7.2",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
