refactor: application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
+#spring.application.name=desafio_insightlab_fornecedores
+#spring.datasource.url=jdbc:postgresql://localhost:5432/desafio_fornecedores
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+#jwt.secret=${JWT_SECRET:secret-key}
+
 spring.application.name=desafio_insightlab_fornecedores
-spring.datasource.url=jdbc:postgresql://localhost:5432/desafio_fornecedores
+spring.datasource.url=jdbc:postgresql://postgres:qrPqiZdrifRGTJIFgtcKjSIJxZoWQLud@roundhouse.proxy.rlwy.net:51760/railway
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=qrPqiZdrifRGTJIFgtcKjSIJxZoWQLud
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
