refactor: application.properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
 #jwt.secret=${JWT_SECRET:secret-key}
 
 spring.application.name=desafio_insightlab_fornecedores
-spring.datasource.url=jdbc:postgresql://postgres:qrPqiZdrifRGTJIFgtcKjSIJxZoWQLud@roundhouse.proxy.rlwy.net:51760/railway
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:51760/railway
 spring.datasource.username=postgres
 spring.datasource.password=qrPqiZdrifRGTJIFgtcKjSIJxZoWQLud
 spring.jpa.hibernate.ddl-auto=update
