refactor: conexão com o .

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=desafio_insightlab_fornecedores
-spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:51760/railway
-spring.datasource.username=postgres
-spring.datasource.password=qrPqiZdrifRGTJIFgtcKjSIJxZoWQLud
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
